test/test_suite/errors/error_decl_ok.c3
module errors;

fault A;

fault A2, B2;

fault C, D;


